pratique/2007-p1-f2-tele.out-comp.txt
2007-p1-f2-tele.cpp: In function ‘int main()’:
2007-p1-f2-tele.cpp:18:46: error: ‘function’ was not declared in this scope
   18 |     priority_queue<Ligacao, vector<Ligacao>, function<bool(Ligacao, Ligacao)>> pq(
      |                                              ^~~~~~~~
2007-p1-f2-tele.cpp:4:1: note: ‘std::function’ is defined in header ‘<functional>’; did you forget to ‘#include <functional>’?
    3 | #include <queue>
  +++ |+#include <functional>
    4 | #include <vector>
2007-p1-f2-tele.cpp:18:76: error: expression list treated as compound expression in functional cast [-fpermissive]
   18 |     priority_queue<Ligacao, vector<Ligacao>, function<bool(Ligacao, Ligacao)>> pq(
      |                                                                            ^
2007-p1-f2-tele.cpp:18:77: error: template argument 3 is invalid
   18 |     priority_queue<Ligacao, vector<Ligacao>, function<bool(Ligacao, Ligacao)>> pq(
      |                                                                             ^~
2007-p1-f2-tele.cpp:19:63: error: invalid user-defined conversion from ‘main()::<lambda(Ligacao, Ligacao)>’ to ‘int’ [-fpermissive]
   19 |         [](Ligacao a, Ligacao b) { return a.tempo > b.tempo; });
      |                                                               ^
2007-p1-f2-tele.cpp:19:9: note: candidate is: ‘constexpr main()::<lambda(Ligacao, Ligacao)>::operator bool (*)(Ligacao, Ligacao)() const’ (near match)
   19 |         [](Ligacao a, Ligacao b) { return a.tempo > b.tempo; });
      |         ^
2007-p1-f2-tele.cpp:19:9: note:   no known conversion from ‘bool (*)(Ligacao, Ligacao)’ to ‘int’
2007-p1-f2-tele.cpp:26:12: error: request for member ‘push’ in ‘pq’, which is of non-class type ‘int’
   26 |         pq.push({T, i % N + 1});
      |            ^~~~
2007-p1-f2-tele.cpp:29:16: error: request for member ‘empty’ in ‘pq’, which is of non-class type ‘int’
   29 |     while (!pq.empty()) {
      |                ^~~~~
2007-p1-f2-tele.cpp:30:30: error: request for member ‘top’ in ‘pq’, which is of non-class type ‘int’
   30 |         Ligacao ligacao = pq.top();
      |                              ^~~
2007-p1-f2-tele.cpp:31:12: error: request for member ‘pop’ in ‘pq’, which is of non-class type ‘int’
   31 |         pq.pop();
      |            ^~~
2007-p1-f2-tele.cpp:33:12: error: request for member ‘push’ in ‘pq’, which is of non-class type ‘int’
   33 |         pq.push({ligacao.tempo - 1, ligacao.vendedor});
      |            ^~~~
2007-p1-f2-tele.cpp:34:39: error: request for member ‘push’ in ‘pq’, which is of non-class type ‘int’
   34 |         if (ligacao.tempo - 1 > 0) pq.push({ligacao.tempo - 1, ligacao.vendedor});
      |                                       ^~~~
